--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,35 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # State Management & Navigation
+  supabase_flutter: ^2.1.0
+  flutter_riverpod: ^2.0.6
+  go_router: ^8.0.0
+  
+  # Authentication & Social Login
+  google_sign_in: ^6.1.5
+  sign_in_with_apple: ^5.0.0
+  
+  # Storage & Cache
+  shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
+  
+  # UI & Utilities
+  image_picker: ^1.0.4
+  cached_network_image: ^3.3.0
+  flutter_svg: ^2.0.9
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^3.5.2
+  intl: ^0.18.1
+  
+  # Permissions & Location
+  permission_handler: ^11.0.1
+  geolocator: ^10.1.0
+  
+  # Utils
+  uuid: ^4.1.0
+  equatable: ^2.0.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
